force-app/main/default/objects/PO_Pricing_Details__c/PO_Pricing_Details__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Receipt</label>
    <nameField>
        <displayFormat>POR-{000000}</displayFormat>
        <label>PO Receipt Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Receipt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>