force-app/main/default/objects/PO_Pricing_Details__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Phase</label>
    <referenceTo>Project_Phase__c</referenceTo>
    <relationshipName>PO_Pricing_Details</relationshipName>
    <type>Lookup</type>
</CustomField>