force-app/main/default/objects/PO_Pricing_Details__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Purchase Order Receipt</relationshipLabel>
    <relationshipName>Purchase_Order_Receipt</relationshipName>
    <type>Lookup</type>
</CustomField>