force-app/main/default/objects/PO_Pricing_Details__c/fields/Total_PO_Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_PO_Item_Cost__c</fullName>
    <label>Total PO Item Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>