force-app/main/default/objects/PO_Pricing_Details__c/fields/Total_PO_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_PO_Item_Quantity__c</fullName>
    <label>Total PO Item Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>